API call execution and UI implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">hilt-coroutines-retrofit-example</string>
+    <string name="error_message">Something went wrong!</string>
+    <string name="followers">Followers: %d</string>
 </resources>
